# otus9_BALKSERvak

./: AllProzessors.cpp  AllProzessors.h  CMakeLists.txt  OutPuts2Console.cpp  OutPuts2Console.h  README.md  Sessia.cpp  Sessia.h  TreadProzessors.cpp  TreadProzessors.h  Writer.cpp  Writer.h  main.cpp  server.cpp  server.h
.github/workflows/: c-cpp.yml
